# CAP

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  index.html  install-cap.ps1  launch-cap.cjs  launch-cap.vbs  package-lock.json  package.json  railway.json  vite.config.ts
docs/: architecture.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
tests/: smoke-auth.cjs  smoke-discovery.cjs  smoke-founder-control.cjs  smoke-founder-upgrade.cjs  smoke-media-profile.cjs
