[package]
name = "cap-desktop"
version = "0.1.0"
description = "Creator Association Platform desktop application"
authors = ["CAP"]
edition = "2021"

[lib]
name = "cap_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
